fix spacing on dropdown menu

--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ h2 ~ p {
 }
 .header-nav {
   float: right;
-  padding: 5.5vh 60px 0 0;
+  padding: 5.5vh 60px 16px 0;
 }
 .header-nav a,
 .drop-trigger {
@@ -211,7 +211,7 @@ h2 ~ p {
   border-radius: 5px 5px 0 0;
   color: #999;
   font-size: 0.5em;
-  padding-right: 1em 1em 0.25em;
+  padding: 1em 1em 0.25em;
   text-align: right;
   text-transform: uppercase;
 }
@@ -245,7 +245,7 @@ h2 ~ p {
 }
 .footer .drop-menu:before {
   border-color: #fff transparent transparent;
-  top: 7em;
+  top: 7.6em;
 }
 .footer .drop-menu li {
   display: block;
@@ -673,10 +673,13 @@ h2 ~ p {
   }
   /* HIDE DROPDOWN IN THE NAV MENU */
   .header-nav .dropdown:hover .drop-menu,
-  .header-nav .drop-trigger:after {
+  .header-nav .drop-trigger:after,
+  .footer-nav .dropdown:hover .drop-menu,
+  .footer-nav .drop-trigger:after{
     display: none;
   }
-  .header-nav .drop-trigger {
+  .header-nav .drop-trigger,
+  .footer-nav .drop-trigger {
     padding-right: 0;
   }
   .mobile-menu-check:checked ~ .header-nav {
@@ -697,8 +700,8 @@ h2 ~ p {
   .footer .social-list {
     margin-top: 1em;
   }
-  .footer .drop-menu:before {
-    top: 9.6em;
+  .footer-nav .drop-menu{
+    display: none;
   }
 
   /* HOME STYLES */
